--- a/index.html
+++ b/index.html
@@ -209,43 +209,25 @@
         eager to learn more in this fast paced industry.
       </p>
       <div class="portafolio-menu">
-        <a href="#">Developement</a>
-        <a href="#">Videos</a>
-        <a href="#">Design</a>
+        <a id="portfolio-nav-item-1" href="#1">Developement</a>
+        <a id="portfolio-nav-item-2" href="#2">Videos</a>
+        <a id="portfolio-nav-item-3" href="#3">Design</a>
       </div>
       <div class="portafolio-proyectos">
-        <div class="item-portafolio">
-            <a href="https://github.com/ivansanguezax/MonitumAqua">
-               <img src="Assets/png/projectsImages/1.png" alt="Project Images">
+        <div id="item-1" class="item-portafolio">
+        </div>
+        <div id="item-2" class="item-portafolio">
             </a>
         </div>
-        <div class="item-portafolio">
-            <a href="https://github.com/ivansanguezax/Tacaibot">
-                <img src="Assets/png/projectsImages/2.png" alt="Project Images">
-
-            </a>
+        <div id="item-3" class="item-portafolio">
         </div>
-        <div class="item-portafolio">
-            <a href="https://github.com/ivansanguezax/QuetzalBot">
-                <img src="Assets/png/projectsImages/3.png" alt="Project Images">
-            </a>
-        </div>
-        <div class="item-portafolio">
-            <a href="https://github.com/ivansanguezax/OrbitarStudio">
-                <img src="Assets/png/projectsImages/4.png" alt="Project Images">
-            </a>
+        <div id="item-4" class="item-portafolio">
         </div>
 
-        <div class="item-portafolio">
-            <a href="https://github.com/ivansanguezax/iCheck">
-                <img src="Assets/png/projectsImages/5.png" alt="Project Images">
-            </a>
+        <div id="item-5" class="item-portafolio">
         </div>
 
-        <div class="item-portafolio">
-            <a href="https://github.com/ivansanguezax/QuetzalBot">
-                <img src="Assets/png/projectsImages/6.png" alt="Project Images">
-            </a>
+        <div id="item-6" class="item-portafolio">
         </div>
 
       </div>
@@ -286,5 +268,6 @@
 
     <!-- iconos -->
     <script src="https://use.fontawesome.com/e219faacba.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
