--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <img src="Assets/png/logo.png" alt="Logo" />
         <h1>Ivan Sangueza</h1>
       </div>
-      <nav class="header-menu">
-        <ul>
+      <nav class="header-menu menu">
+        <ul class="navbar" id="navbar">
           <li>
             <a href="#">Inicio</a>
           </li>
@@ -50,7 +50,13 @@
           <li>
             <a href="#">Contactame</a>
           </li>
-        </ul>
+          <a class="close" href="#">
+            <img src="https://ljc-dev.github.io/testing0/ham-close.svg" alt="close">
+          </a>
+          </ul>
+          <a class="hamburger" href="#navbar">
+            <img src="https://ljc-dev.github.io/testing0/ham.svg" alt="menu">
+          </a>
       </nav>
     </header>
 
